fix some naming and formatting, fix missed warnings